--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@types/react-dom": "^18.3.1",
     "@types/styled-components": "^5.1.34",
     "axios": "^1.7.7",
+    "dayjs": "^1.11.13",
+    "fast-xml-parser": "^4.5.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.28.0",
